# run-dotnet

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  test.cs
.github/: Dockerfile.ubuntu22.04  Dockerfile.ubuntu24.04
.github/workflows/: build.yml
util/: extract_tar_gz.cpp  extract_tar_gz.h  https_download.cpp
